# OvenMediaEngine

./: .gitignore
misc/: prerequisites.sh
src/: CMakeLists.txt
src/core/: build_executable.mk  build_objects.mk  build_prebuilt_library.mk  build_shared_library.mk  build_static_library.mk  prepare_to_build.mk
src/projects/: AMS.mk  CMakeLists.txt  utils.cmake
src/projects/api_server/: CMakeLists.txt
src/projects/api_server/controllers/v1/vhosts/apps/: app_actions_controller.cpp
src/projects/base/: CMakeLists.txt
src/projects/base/info/: CMakeLists.txt  stream.cpp
src/projects/base/ovcrypto/: CMakeLists.txt
src/projects/base/ovlibrary/: CMakeLists.txt  clock.h  delay_queue.cpp  message_thread.h  stop_watch.cpp  stop_watch.h
src/projects/base/ovsocket/: CMakeLists.txt  client_socket.cpp  socket.cpp
src/projects/base/provider/: AMS.mk  CMakeLists.txt  provider.cpp
src/projects/base/provider/pull_provider/: application.cpp  stream_motor.cpp
src/projects/base/provider/push_provider/: provider.cpp
src/projects/base/publisher/: CMakeLists.txt  application.cpp  publisher.cpp  stream.cpp
src/projects/config/: CMakeLists.txt
src/projects/config/engine/: data_source.cpp  item.cpp
src/projects/main/: AMS.mk  CMakeLists.txt  banner.cpp  signals.cpp
src/projects/mediarouter/: CMakeLists.txt  mediarouter_application.cpp
src/projects/modules/: CMakeLists.txt
src/projects/modules/bitstream/: CMakeLists.txt
src/projects/modules/containers/: CMakeLists.txt
src/projects/modules/dtls_srtp/: CMakeLists.txt
src/projects/modules/file/: CMakeLists.txt
src/projects/modules/http_server/: CMakeLists.txt
src/projects/modules/ice/: CMakeLists.txt
src/projects/modules/mpegts/: CMakeLists.txt
src/projects/modules/ovt_packetizer/: CMakeLists.txt
src/projects/modules/physical_port/: CMakeLists.txt  physical_port.cpp  physical_port_worker.cpp
src/projects/modules/rtc_signalling/: CMakeLists.txt
src/projects/modules/rtmp/: CMakeLists.txt
src/projects/modules/rtp_rtcp/: CMakeLists.txt  rtp_history.h
src/projects/modules/sdp/: CMakeLists.txt
src/projects/modules/segment_writer/: CMakeLists.txt
src/projects/modules/signature/: CMakeLists.txt
src/projects/monitoring/: CMakeLists.txt  common_metrics.cpp
src/projects/orchestrator/: CMakeLists.txt
src/projects/providers/: CMakeLists.txt
src/projects/providers/mpegts/: CMakeLists.txt
src/projects/providers/ovt/: CMakeLists.txt
src/projects/providers/rtmp/: CMakeLists.txt  rtmp_stream.cpp
src/projects/providers/rtsp/: CMakeLists.txt
src/projects/providers/rtspc/: CMakeLists.txt
src/projects/publishers/: CMakeLists.txt
src/projects/publishers/file/: CMakeLists.txt  file_publisher.cpp
src/projects/publishers/ovt/: CMakeLists.txt
src/projects/publishers/rtmppush/: CMakeLists.txt  rtmppush_publisher.cpp
src/projects/publishers/segment/: CMakeLists.txt  segment_publisher.cpp
src/projects/publishers/segment/dash/: dash_packetizer.cpp
src/projects/publishers/segment/segment_stream/: segment_worker_manager.cpp
src/projects/publishers/thumbnail/: CMakeLists.txt
src/projects/publishers/webrtc/: CMakeLists.txt
src/projects/transcode/: CMakeLists.txt  transcode_stream.cpp
src/projects/transcode/codec/: transcode_codec_enc_aac.cpp  transcode_codec_enc_avc.cpp  transcode_codec_enc_hevc.cpp  transcode_codec_enc_jpeg.cpp  transcode_codec_enc_opus.cpp  transcode_codec_enc_png.cpp  transcode_codec_enc_vp8.cpp  transcode_decoder.cpp
src/projects/transcode/filter/: media_filter_resampler.cpp  media_filter_rescaler.cpp
src/projects/web_console/: CMakeLists.txt
