cmake_minimum_required(VERSION 3.12)

add_subdirectory(base)
add_subdirectory(api_server)
add_subdirectory(config)
add_subdirectory(main)
add_subdirectory(mediarouter)
add_subdirectory(modules)
add_subdirectory(monitoring)
add_subdirectory(orchestrator)
add_subdirectory(providers)
add_subdirectory(publishers)
add_subdirectory(third_party)
add_subdirectory(transcode)
add_subdirectory(web_console)
